# grant.duchars.dev

./: Cargo.toml  LICENSE  README.md  grant-duchars-dev-77adfc3eed704469.js  grant-duchars-dev-77adfc3eed704469_bg.wasm  grant_duchars_dev-caaffe1056e74ff3.js  grant_duchars_dev-caaffe1056e74ff3_bg.wasm  grant_duchars_dev-e1e2f928b6aa0d8d.js  grant_duchars_dev-e1e2f928b6aa0d8d_bg.wasm  index.html  styles-8a0a2f87206d3bf7.css  styles.css
.github/workflows/: build_and_deploy.yml  deploy_gh_pages.yml
src/: app.rs  components.rs  core.rs  lib.rs  main.rs  pages.rs
src/components/: desktop.rs  mod.rs  taskbar.rs  window.rs
src/core/: browser.rs  defaults.rs  desktop_items.rs  mod.rs  statics.rs  window_data.rs
