[package]
name = "grant-duchars-dev"
version = "0.1.0"
authors = ["Grant Duchars"]
edition = "2024"
homepage = "grant.duchars.dev"
description = "Package for my personal website"
repository = "https://github.com/Grant-Duchars/grant.duchars.dev"

[dependencies]
leptos = { version = "0.7.8", features = ["csr"] }
console_error_panic_hook = "0.1.7"
leptos-use = "0.15.7"
leptos_router = "0.7.8"
