[package]
name = "grant_duchars_dev"
version = "0.1.0"
authors = ["Grant Duchars"]
edition = "2024"
homepage = "grant.duchars.dev"
description = "Package for my personal website"
repository = "https://github.com/Grant-Duchars/grant.duchars.dev"

[dependencies]
leptos = { version = "0.8", features = ["csr", "nightly"] }
leptos-use = "0.16"
leptos_router = "0.8"
console_error_panic_hook = "0.1"
leptos-maybe-callback = "0.2"

[[bin]]
name = "grant_duchars_dev"
path = "src/main.rs"

[lib]
name = "window_lib"
path = "src/lib.rs"
